2003-07-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* make/srcdir.make.in (web-install): Use SRCMAKE, set outdir.

2003-07-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/bibliography/computer-notation.bib (pages): prune
	unscientific language.

	* Documentation/user/GNUmakefile: copy unsplit file to
	lilypond.html (idem for lilypond-internals).

	* buildscripts/mutopia-index.py (read_dict): remove "example file:"

	* Documentation/topdocs/NEWS.texi (Top): rewrite NEWS in texinfo.

	* python/lilylib.py (lilypond_version): 2.1 proof version check.

	* lily/staff-symbol-referencer.cc (LY_DEFINE): lrint, the final
	fix.
	
2003-07-25  Heikki Junes  <hjunes@cc.hut.fi>

        * Documentation/user/{ various }: bind text snippets with their
        examples, e.g. by punctuation: This is an example.

2003-07-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ly/performer-init.ly (VoiceContext): Typos.

	* stepmake/stepmake/toplevel-targets.make (install): For srcdir
	builds, leave final-install to toplevel srcdir makefile.

	* make/srcdir.make.in (install): New target.

2003-07-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ly/performer-init.ly (TabStaffContext, TabVoiceContext): Add.
	This fixes core dump on MIDI ouput (Simon Weatherill).

	* stepmake/stepmake/generic-targets.make (WWW-post): Oops, depend
	on local-WWW-post.

2003-07-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* make/lilypond.redhat.spec.in: add dvips to reqs.

2003-07-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* make/srcdir.make.in (web): Add special web target.

	* stepmake/stepmake/generic-targets.make (WWW): Remove $(MAKE)
	from inner $(LOOP).

	* cygwin/mknetrel: Override $(webdir) (was: $(docdir)).

	* stepmake/stepmake/generic-targets.make (www-targets-help):
	* GNUmakefile.in (web-install): Install in $(webdir).

	* input/test/smart-transpose.ly (texidoc): texidoc compile fix.

	* cygwin/changelog: 
	* cygwin/mknetrel: Update.

	* GNUmakefile.in (web-install): Rename (was: install-html-doc).